--- a/network/package.json
+++ b/network/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@edonec/collapsible": "^2.0.0",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^11.0.1",
+    "toastify": "^2.0.1",
     "tw-elements-react": "^1.0.0-alpha-end"
   },
   "devDependencies": {
@@ -29,6 +34,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.8"
+    "vite": "^5.4.11"
   }
 }
