--- a/network/package.json
+++ b/network/package.json
@@ -13,6 +13,7 @@
     "@edonec/collapsible": "^2.0.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.7",
+    "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
