--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
     "@mui/x-date-pickers": "^7.23.6",
+    "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.7",
@@ -22,8 +23,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.28.1",
     "react-toastify": "^11.0.1",
+    "recharts": "^2.15.0",
     "toastify": "^2.0.1",
     "tw-elements-react": "^1.0.0-alpha-end"
   },
