--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.7",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
