minio-image-endpoint

--- a/package.json
+++ b/package.json
@@ -18,21 +18,26 @@
     "@mui/x-date-pickers": "^7.23.6",
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.7",
     "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.471.1",
+    "lucide-react": "^0.471.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
     "react-toastify": "^11.0.1",
     "recharts": "^2.15.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "toastify": "^2.0.1",
     "tw-elements-react": "^1.0.0-alpha-end"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/node": "^22.10.10",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
