--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.1",
     "@mui/x-date-pickers": "^7.24.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/google.maps": "^3.58.1",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.7",
@@ -24,7 +25,10 @@
     "lucide-react": "^0.471.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-autocomplete": "^2.7.4",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.4.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.28.2",
     "react-toastify": "^11.0.1",
     "recharts": "^2.15.0",
