--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@mui/x-date-pickers": "^7.24.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "@types/google.maps": "^3.58.1",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.7",
     "jwt-decode": "^4.0.0",
@@ -32,6 +35,7 @@
     "react-router-dom": "^6.28.2",
     "react-toastify": "^11.0.1",
     "recharts": "^2.15.0",
+    "tailwind-variants": "^0.3.1",
     "toastify": "^2.0.1",
     "tw-elements-react": "^1.0.0-alpha-end"
   },
@@ -47,7 +51,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.4.11"
   }
 }
