--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.1",
     "@mui/x-date-pickers": "^7.24.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/google.maps": "^3.58.1",
     "axios": "^1.7.7",
@@ -35,9 +36,8 @@
     "react-router-dom": "^6.28.2",
     "react-toastify": "^11.0.1",
     "recharts": "^2.15.0",
-
-    "tailwind-variants": "^0.3.1",
     "tailwind-merge": "^2.6.0",
+    "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
     "toastify": "^2.0.1",
     "tw-elements-react": "^1.0.0-alpha-end"
