--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-google-autocomplete": "^2.7.4",
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.4.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-vector-icons": "^10.2.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.28.2",
     "react-toastify": "^11.0.1",
